# Intelligent_security

./: CMakeLists.txt  README.md
inc/: lcd.h  touch.h  uart.h
src/: client  com.c  com.h  lcd.c  main.c  server  server.out  tcp_client.c  tcp_server.c  touch.c  uart.c
